Revise content and animations in index.html
Updated hero section and various content for clarity and engagement.

Signed-off-by: NeuroVibe <unone34@gmail.com>

--- a/index.html
+++ b/index.html
@@ -23,31 +23,26 @@
   </header>
 
   <!-- HERO -->
-  <section id="home" class="hero">
-    <div class="hero-content">
-      <h1>Neuro<span>Vibe</span></h1>
-      <p>A student-led tech startup building the future of AI, innovation, and digital solutions.</p>
-      <a href="#about" class="btn">Explore Our Journey</a>
-    </div>
+  <section id="home" class="hero animate-up">
+    <h1>Neuro<span>Vibe</span></h1>
+    <p>Student-led tech startup shaping the future with innovation & AI.</p>
+    <a href="#about" class="btn">Explore Our Journey</a>
   </section>
 
   <!-- ABOUT -->
-  <section id="about" class="section">
+  <section id="about" class="section animate-fade">
     <h2>About NeuroVibe</h2>
     <p class="subtitle">The Student-Led Tech Movement</p>
     <p class="text">
-      NeuroVibe is a student-driven technology startup founded by young innovators.
-      We focus on creating powerful, simple, and futuristic digital solutions for
-      students, organizations, and businesses. Our mission is to prove that age is
-      not a limit to innovation.
+      NeuroVibe is founded by young innovators who create smart, futuristic digital solutions
+      for students, organizations, and businesses. Age is not a limit to innovation.
     </p>
   </section>
 
   <!-- TEAM -->
-  <section id="team" class="section dark">
+  <section id="team" class="section dark animate-fade">
     <h2>Minds Behind the Company</h2>
     <p class="subtitle">Leadership & Core Team</p>
-
     <div class="cards">
       <div class="card">
         <h3>Lavanya Sharma</h3>
@@ -70,52 +65,40 @@
   </section>
 
   <!-- PROJECTS -->
-  <section id="projects" class="section">
+  <section id="projects" class="section animate-fade">
     <h2>Our Projects</h2>
     <p class="subtitle">Innovation in Action</p>
-
     <div class="cards">
       <div class="card">
         <h3>Stutech</h3>
         <p class="role">Upcoming Student Platform</p>
-        <p>
-          Stutech is our flagship project designed to empower students with AI tools,
-          smart learning systems, productivity features, and secure technology.
-        </p>
+        <p>AI tools, smart learning systems, productivity features, secure technology.</p>
       </div>
-
       <div class="card">
         <h3>Future Labs</h3>
         <p class="role">Research & Development</p>
-        <p>
-          NeuroVibe Future Labs focuses on experimental technology, AI research,
-          automation, and next-generation digital products.
-        </p>
+        <p>Experimental technology, AI research, automation, and next-gen digital products.</p>
       </div>
     </div>
   </section>
 
   <!-- SERVICES -->
-  <section id="services" class="section dark">
+  <section id="services" class="section dark animate-fade">
     <h2>NeuroVibe.Services</h2>
     <p class="subtitle">Technology for Organizations & Clients</p>
-
     <div class="cards">
       <div class="card">
         <h3>AI Solutions</h3>
         <p>Custom AI bots, automation systems, and smart tools.</p>
       </div>
-
       <div class="card">
         <h3>Web Development</h3>
         <p>Modern, responsive websites for businesses and startups.</p>
       </div>
-
       <div class="card">
         <h3>Student Platforms</h3>
         <p>Educational tools, portals, and learning management systems.</p>
       </div>
-
       <div class="card">
         <h3>Startup Tech</h3>
         <p>End-to-end digital solutions for early-stage companies.</p>
@@ -124,21 +107,20 @@
   </section>
 
   <!-- VISION -->
-  <section id="vision" class="section vision">
+  <section id="vision" class="section vision animate-up">
     <h2>Our Vision</h2>
     <p class="subtitle">Run by Teens. Built for the Future.</p>
     <p class="text">
-      NeuroVibe believes that teenagers can lead technological revolutions.
-      Our vision is to create a global student-powered tech ecosystem that
-      develops ethical AI, accessible platforms, and innovation without limits.
+      NeuroVibe believes teens can lead technological revolutions. We aim to create
+      a global student-powered tech ecosystem with ethical AI, accessible platforms,
+      and unlimited innovation.
     </p>
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="section contact">
+  <section id="contact" class="section contact animate-fade">
     <h2>Contact NeuroVibe</h2>
     <p class="subtitle">Let’s Build Something Powerful</p>
-
     <div class="contact-box">
       <p><strong>Company:</strong> NeuroVibe</p>
       <p><strong>Phone:</strong> 6005651167</p>
